2019-03-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha06: Marathon Man';git push
	git tag -a 4.8.0-alpha06 -m 'ncremap --vrt_fl';git push --tags

	* nco_ntp_vrt() verify interpolation works on cami dataset

	* nco_ntp_vrt() verify interpolation looks OK (i.e., nearest neighbor above model top) on EAM L30->L72

	* nco_ntp_vrt() verify identity interpolation is BFB on EAM L30->L30

	* nco_ntp_vrt() use 1D interpolation code from CSZ's libcsz.a library source code ~/sw/c++/vec.hh

2019-03-29  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() compute ilev_out and lev_out if not supplied in	vertical grid file

	* nco_ntp_vrt() use horizontal grid from input dataset if vertical grid file does not have horizontal grid

2019-03-28  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() adjust OpenMP pragmas to work on old compilers

	* nco_ntp_vrt() swap _in and _out from file-based to grid-based meanings to increase code clarity

2019-03-27  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() defines all variables and copies their metadata to output file

	* nco_ntp_vrt() fill-in output file with hybrid coordinate vertical grid data and metadata

2019-03-26  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() compute midpoint and interface pressures on input and output grids

	* ncremap call vertical OR horizontal interpolation routines. ncks add skeleton nco_ntp_vrt().

	* ncremap add stubs for vertical coordinate file

	* NCO 4.8.0-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha05: Dawn Wall';git push
	git tag -a 4.8.0-alpha05 -m 'ncemap SGS MPAS-SeaIce, GSG protoype; ncclimo Cori KNL bms, orphans';git push --tags

	* ncremap -P mpascice can employ old SGS mode to evaluate new GSG mode

	* ncremap nco_rgr_wgt() remove extraneous test on sum total of sgs_frc_out

2019-03-25  Charlie Zender  <zender@uci.edu>
