@@ -1,3 +1,9 @@
+2019-03-31  Charlie Zender  <zender@uci.edu>
+
+	* nco_ntp_vrt() isolate log(pressure) assumption
+
+	* nco_ntp_vrt() allow possibility that PS has time dimension > 1
+
 2019-03-30  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.8.0-alpha06 release procedure:
